--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@
 # Applikationskonfiguration
 # Kan også sættes via miljøvariabler direkte: AppSettings__ApplicationTitle=MinApp
 AppSettings__ApplicationTitle=Simpel Bogføring Demo App
+AppSettings__DataPath=data
+AppSettings__RegnskabFileName=regnskab.json
+AppSettings__KontoplanFileName=kontoplan.csv
 
 # Serilog konfiguration (valgfrit - kan også sættes i appsettings.json)
 # Serilog__MinimumLevel__Default=Information
