--- a/SimpelBogfoering.csproj
+++ b/SimpelBogfoering.csproj
@@ -14,6 +14,8 @@
     </PackageReference>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Meziantou.Analyzer" Version="2.0.223">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
